# Cherenkov_quick_mc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cherenkov_mcConfig.cmake.in
data/: PDE.root  clarity_jap2021_tsa1-2b_recovered.root  clarity_jap2021_tsa1-3b_recovered.root  clarity_jap2021_tsa2-4a_recovered.root  clarity_jap2022_AG22J001.root  clarity_jap2022_AG22J003.root  clarity_jap2022_AG22J009.root  clarity_jap2022_AG22J010.root
example/: fit_optical_curves.cxx  run.cxx
include/cherenkov_mc/: cherenkov.h  cherenkov_mc.h  constants.h  dynamics.h  fast_mc.h  geometry.h  particle.h  photon_interactions.h  physics_vector.h  probability.h
lib/: cherenkov.h  constants.h  dynamics.h  fast_mc.h  particle.h  photon_interactions.h  physics_vector.h  probability.h
macros/: quick_look.C
src/cherenkov_mc/: cherenkov.cxx  fast_mc.cxx  geometry.cxx  particle.cxx  photon_interactions.cxx  physics_vector.cxx  probability.cxx
test/: tester_cherenkov.cxx  tester_geometry.cxx  tester_kinematics.cxx  tester_photon_interactions.cxx  tester_physics_vector.cxx  tester_propagation.cxx
